# android-opencv-opengl-assignment

./: README.md
app/: README.md  gradle.properties  local.properties  settings.gradle
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
app/app/src/main/cpp/: CMakeLists.txt  edge_detection.cpp
app/app/src/main/java/com/edgedetection/: EdgeDetector.java  MainActivity.java  MainActivityFallback.java
app/app/src/main/java/com/edgedetection/opengl/: EdgeDetectionGLView.java  EdgeDetectionRenderer.java
app/app/src/main/java/com/example/app/: CameraActivity.java  MainActivity.java  SplashActivity.java
app/app/src/main/res/drawable/: gradient_bg.xml  splash_background.xml
app/app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_splash.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
web/: generate-sample-image.html  index.html  vite.config.ts
web/app/: globals.css  page.tsx
web/assets/: README.md
web/components/: edge-detection-showcase.tsx
web/src/: main.ts  styles.css
